--- a/site/static/styles/index.css
+++ b/site/static/styles/index.css
@@ -1,7 +1,7 @@
 .index-me {
     width: 100%;
     border-radius: 50%;
-    border: 3px solid #fff;
+    border: 3px solid #000;
 }
 
 .index-about img {
