--- a/site/static/styles/posts.css
+++ b/site/static/styles/posts.css
@@ -5,12 +5,5 @@
 
 .posts-tags {
     font-size: 0.8em;
-}
-
-.posts-tag {
-    display: inline-block;
-    padding: 2px 5px;
-    background-color: #ccc;
-    margin: 3px;
-    border-radius: 1px;
+    font-style: italic;
 }
