--- a/site/static/styles/shared/button.css
+++ b/site/static/styles/shared/button.css
@@ -1,14 +1,10 @@
 .button {
-    background-color: #999;
-    background-image: linear-gradient(0deg, hsla(0, 0%, 100%, .05), hsla(0, 0%, 0%, .1));
+    background-color: #ccc;
     border: none;
-    border-radius: .5em;
-    box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .25),
-                inset 0 2px 0 hsla(0, 0%, 100%, .1),
-                inset 0 1.2em 0 hsla(0, 0%, 100%, .1),
-                inset 0 -.2em 0 hsla(0, 0%, 100%, .1),
-                inset 0 -.25em 0 hsla(0, 0%, 0%, .5),
-                0 .25em .25em hsla(0, 0%, 0%, .1);
+    box-shadow:
+        inset 0 0 0 1px hsla(0, 0%, 0%, .75), /* border */
+        inset 0 -.2em 0 hsla(0, 0%, 100%, .1), /* bottom background color */
+        inset 0 -.25em 0 hsla(0, 0%, 0%, .75) /* bottom background color */;
     color: #444;
     display: inline-block;
     font-weight: bold;
@@ -18,23 +14,16 @@
 
 .button:hover,
 .button:focus {
-    box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .25),
-                inset 0 2px 0 hsla(0, 0%, 100%, .1),
-                inset 0 1.2em 0 hsla(0, 0%, 100%, .1),
-                inset 0 -.2em 0 hsla(0, 0%, 100%, .1),
-                inset 0 -.25em 0 hsla(0, 0%, 0%, .5),
-                inset 0 0 0 3em hsla(0, 0%, 100%, .2),
-                0 .25em .25em hsla(0, 0%, 0%, .1);
+    box-shadow:
+        inset 0 0 0 1px hsla(0, 0%, 0%, .75), /* border */
+        inset 0 -.2em 0 hsla(0, 0%, 100%, .1), /* bottom background color */
+        inset 0 -.25em 0 hsla(0, 0%, 0%, .75), /* bottom background color */
+        inset 0 0 0 3em hsla(0, 0%, 100%, .2) /* hover background color */;
 }
 
 .button:active {
-    box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .25),
-                inset 0 2px 0 hsla(0, 0%, 100%, .1),
-                inset 0 1.2em 0 hsla(0, 0%, 100%, .1),
-                inset 0 0 0 3em hsla(0, 0%, 100%, .2),
-                inset 0 .25em .5em hsla(0, 0%, 0%, .05),
-                0 -1px 1px hsla(0, 0%, 0%, .1),
-                0 1px 1px hsla(0, 0%, 100%, .25);
+    box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, .75), /* border */
+                inset 0 0 0 3em hsla(0, 0%, 100%, .2) /* hover background color */;
     transform: translateY(.25em);
     padding-bottom: .5em;
 }
