Use font-display optional

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -16,7 +16,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Pontano+Sans"
+      href="https://fonts.googleapis.com/css?family=Pontano+Sans&display=optional"
     />
 
     {% set css %}
