--- a/src/static/styles/projects-details.css
+++ b/src/static/styles/projects-details.css
@@ -1,31 +1,25 @@
-.projects-details-logo {
+.projects-details-info {
 	float: right;
-	width: 48px;
-	height: 48px;
-}
-
-.projects-details-images {
-	background-color: #f0f0f0;
-	border-radius: 0.5em;
-	box-shadow: inset 0 0 0.5em #888;
-	margin-top: 1em;
+	width: 35%;
+	background: #eee;
 	padding: 1em;
-	white-space: nowrap;
+	font-size: 0.8em;
+	margin-left: 0.5em;
+	margin-bottom: 0.5em;
 }
 
-.projects-details-getit {
-	margin-top: 2em;
-	word-spacing: 1em;
+.projects-details-info dl {
+	margin: 0;
 }
 
-.projects-details-getit a {
-	display: inline-block;
-	margin-right: 5px;
-	margin-bottom: 5px;
+.projects-details-info dt {
+	font-weight: bold;
 }
 
-.projects-details-images img,
-.projects-details-getit img {
-	height: 45px;
-	vertical-align: bottom;
+.projects-details-info dd {
+	margin: 0;
+}
+
+.projects-details-info dd:not(:last-child) {
+	margin-bottom: 0.5em;
 }
