Fix prettier config

--- a/src/_includes/layout-project.njk
+++ b/src/_includes/layout-project.njk
@@ -10,7 +10,9 @@ title: Projects
 	<aside class="projects-details-info">
 		<dl>
 			<dt>Homepage</dt>
-			<dd><a href="{{ metadata.homepage }}">{{ metadata.homepage }}</a></dd>
+			<dd>
+				<a href="{{ metadata.homepage }}">{{ metadata.homepage }}</a>
+			</dd>
 			<dt>Language</dt>
 			<dd>{{ metadata.language }}</dd>
 			<dt>License</dt>
