--- a/src/_includes/layout-project.njk
+++ b/src/_includes/layout-project.njk
@@ -13,13 +13,17 @@ title: Projects
 			<dd>
 				<a href="{{ metadata.homepage }}">{{ metadata.homepage }}</a>
 			</dd>
+			<dt>Source</dt>
+			<dd>
+				<a href="{{ metadata.source }}">{{ metadata.source }}</a>
+			</dd>
 			<dt>Language</dt>
 			<dd>{{ metadata.language }}</dd>
 			<dt>License</dt>
 			<dd>{{ metadata.license }}</dd>
 		</dl>
 	</aside>
-	<section>
+	<section class="projects-details-content">
 		{{ content | safe }}
 	</section>
 </article>
