Add kyml and vscode-sql-tagged-template-literals

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -8,9 +8,8 @@
 		/>
 		<meta name="theme-color" content="#c7c7c7" />
 
-		<base href="/" />
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="alternate" type="application/atom+xml" href="feeds/posts" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="alternate" type="application/atom+xml" href="/feeds/posts" />
 
 		<title>{% if title %}{{ title }} - {% endif %}Jan Kühle</title>
 
