Copy images in html transform

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -36,17 +36,17 @@
 
 		<aside class="socials">
 			<a href="https://github.com/frigus02" title="GitHub"
-				><img src="{{ 'socials/github.png' | image }}" alt="GitHub"
+				><img src="{{ '/static/images/socials/github.png' }}" alt="GitHub"
 			/></a>
 			<a
 				href="https://stackoverflow.com/users/1798215/jan"
 				title="Stack Overflow"
 				><img
-					src="{{ 'socials/stack-overflow.png' | image }}"
+					src="{{ '/static/images/socials/stack-overflow.png' }}"
 					alt="Stack Overflow"
 			/></a>
 			<a href="https://twitter.com/frigus02" title="Twitter"
-				><img src="{{ 'socials/twitter.png' | image }}" alt="Twitter"
+				><img src="{{ '/static/images/socials/twitter.png' }}" alt="Twitter"
 			/></a>
 		</aside>
 
