Add crossorigin attribute to Google font <link>

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -16,6 +16,7 @@
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Pontano+Sans&display=optional"
+			crossorigin="anonymous"
 		/>
 
 		{% for style in styles -%}
