Add view transitions

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -7,6 +7,7 @@
 			content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"
 		/>
 		<meta name="theme-color" content="#c7c7c7" />
+		<meta name="view-transition" content="same-origin" />
 
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="alternate" type="application/atom+xml" href="/feeds/posts" />
